--- a/WeatherForecast/src/components/Weather.css
+++ b/WeatherForecast/src/components/Weather.css
@@ -1,4 +1,4 @@
-/* Base container */
+
 .container {
   height: 100vh;
   width: 100%;
@@ -60,7 +60,6 @@
   color: white;
 }
 
-/* Weather display */
 .weather {
   margin-top: 10px;
 }
@@ -78,7 +77,7 @@
 .temp {
   font-size: 3rem;
   font-weight: bold;
-  color: #ffcc70; /* Light warm yellow */
+  color: #ffcc70; 
   margin-top: 5px;
 }
 
@@ -117,7 +116,7 @@
 }
 .data {
   font-size: 1.2rem;
-  color: #add8e6; /* light blue */
+  color: #add8e6; 
   margin-top: 5px;
 }
 .humidity i,
@@ -186,6 +185,6 @@
   color: white;
   padding: 10px 20px;
   text-align: center;
-  margin-top: 20px;
+  margin-top: 10px;
   font-size: 14px;
 }
